Fixed a race condition in the tuio to javascript code, added support for recognizing geometries in tuio 1.1, added blob class that encapsulates tuiocursors and tuioblobs, added sample code for recognizing unknown objects' geometries

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,6 +91,8 @@ set(HDRS
     ServerManager.h
     UserWindow.h
     Launcher.h
+    Blob.h
+    stdafx.h
 )
  
 set(SRCS
@@ -122,6 +124,7 @@ set(SRCS
     ServerManager.cpp
     UserWindow.cpp
     Launcher.cpp
+    Blob.cpp
 )
 
 include_directories(./include)
