Increased size of OSX menu, created screensaver for OSX theme, fixed version numbers

--- a/src/server/Themes/osx/theme.cfg
+++ b/src/server/Themes/osx/theme.cfg
@@ -2,7 +2,7 @@
 # ---------------------------------
 
 screensaver.wait	180
-windows.drag-color	#FFEF00
+windows.drag-color	#434b56
 
 [BottomMenu]
 window.type				"foreground"
