--- a/src/server/Themes/osx/theme.cfg
+++ b/src/server/Themes/osx/theme.cfg
@@ -4,6 +4,9 @@
 screensaver.wait	180
 windows.drag-color	#434b56
 
+physics.enabled			yes
+physics.drag-friction	0.5	
+
 [BottomMenu]
 window.type				"foreground"
 window.URL				"/system/launcher"
