Improved physics and gesture support. Fixed a flickering bug due to improper color animation handling

--- a/src/server/Themes/osx/theme.cfg
+++ b/src/server/Themes/osx/theme.cfg
@@ -4,8 +4,9 @@
 screensaver.wait	180
 windows.drag-color	#434b56
 
-physics.enabled			yes
-physics.drag-friction	0.5	
+physics.enabled				yes
+physics.drag-friction		0.6
+physics.drag-restitution	0.3
 
 [BottomMenu]
 window.type				"foreground"
