Modified OSX theme

--- a/src/server/Themes/osx/theme.cfg
+++ b/src/server/Themes/osx/theme.cfg
@@ -4,8 +4,13 @@
 screensaver.wait	180
 windows.drag-color	#434b56
 
-physics.enabled				yes
+# Starting from Glassomium 0.3, the physics engine can be turned on
+physics.enabled			yes
+
+# How much friction should be applied to windows when released from a drag
 physics.drag-friction		0.6
+
+# How much should windows bounce off from the corners of the screen
 physics.drag-restitution	0.3
 
 [BottomMenu]
