Improved applications, tuned themes

--- a/src/server/WebRoot/apps/Calculator/assets/application.cfg
+++ b/src/server/WebRoot/apps/Calculator/assets/application.cfg
@@ -5,7 +5,7 @@
 
 
 window.width	0.4
-window.aspectratio	0.8
+window.aspectratio	1
 #window.height	0.6
 
 
@@ -13,5 +13,5 @@ window.aspectratio	0.8
 # the window will display whatever is below it. When this property is set to no
 # a white background will fill the content. Default is yes.
 
-window.transparent	yes
+window.transparent	no
 
