--- a/src/server/Themes/default/theme.cfg
+++ b/src/server/Themes/default/theme.cfg
@@ -2,7 +2,10 @@
 # ---------------------------------
 
 screensaver.wait	180
-windows.drag-color	#FFEF00
+
+desktop.fade-transition-color	#266ACF
+
+windows.drag-color	#505050
 windows.close-threshold		0.12
 
 # Starting from Glassomium 0.3, the physics engine can be turned on
@@ -38,7 +41,7 @@ window.z-order			1
 [LeftMenu]
 window.type				"background"
 window.URL				"/system/launcher"
-window.width			0.9
+window.width			0.45
 window.height			0.05
 window.position.x		0.04
 window.position.y		0.5
@@ -48,7 +51,7 @@ window.z-order			1
 [RightMenu]
 window.type				"background"
 window.URL				"/system/launcher"
-window.width			0.9
+window.width			0.45
 window.height			0.05
 window.position.x		0.960
 window.position.y		0.5
