Started working on the minimize feature

--- a/src/server/Themes/default/theme.cfg
+++ b/src/server/Themes/default/theme.cfg
@@ -8,6 +8,9 @@ desktop.fade-transition-color	#266ACF
 windows.drag-color	#505050
 windows.close-threshold		0.16
 
+# Is minimize-enabled of windows supported in this theme?
+windows.minimize.enabled	yes
+
 # Starting from Glassomium 0.3, the physics engine can be turned on
 physics.enabled			yes
 
@@ -16,7 +19,6 @@ physics.drag-friction		0.3
 
 # How much should windows bounce off from the corners of the screen
 physics.drag-restitution	0.3
-
 
 [BottomMenu]
 window.type				"background"
