Continued implementation of minimize, now applications can be dragged outside the screen and appear in the stash of a theme, still to implement restore

--- a/src/server/Themes/default/theme.cfg
+++ b/src/server/Themes/default/theme.cfg
@@ -22,7 +22,7 @@ physics.drag-restitution	0.3
 
 [BottomMenu]
 window.type				"background"
-window.URL				"/system/launcher"
+window.URL				"/system/launcher?position=bottom"
 window.width			0.9
 window.height			0.07
 window.position.x		0.5
@@ -32,7 +32,7 @@ window.z-order			1
 
 [TopMenu]
 window.type				"background"
-window.URL				"/system/launcher"
+window.URL				"/system/launcher?position=top"
 window.width			0.9
 window.height			0.07
 window.position.x		0.5
@@ -42,7 +42,7 @@ window.z-order			1
 
 [LeftMenu]
 window.type				"background"
-window.URL				"/system/launcher"
+window.URL				"/system/launcher?position=left"
 window.width			0.45
 window.height			0.07
 window.position.x		0.04
@@ -52,7 +52,7 @@ window.z-order			1
 
 [RightMenu]
 window.type				"background"
-window.URL				"/system/launcher"
+window.URL				"/system/launcher?position=right"
 window.width			0.45
 window.height			0.07
 window.position.x		0.960
