--- a/src/server/Themes/default/theme.cfg
+++ b/src/server/Themes/default/theme.cfg
@@ -6,10 +6,17 @@ screensaver.wait	180
 desktop.fade-transition-color	#266ACF
 
 windows.drag-color	#505050
-windows.close-threshold		0.16
+#windows.close-threshold		0.16
+windows.close-threshold		0.20
+
+# If scaling is too sensitive, you can decrease this factor to make it slower
+windows.scale-factor		1.0
 
 # Is minimize-enabled of windows supported in this theme?
 windows.minimize.enabled	yes
+
+# How many pixels should a window cross a screen border before getting minimized?
+windows.minimize.border-threshold	50
 
 # Starting from Glassomium 0.3, the physics engine can be turned on
 physics.enabled			yes
